--- a/css/styles.css
+++ b/css/styles.css
@@ -35,26 +35,15 @@ body {
     color: var(--brand-color);
     letter-spacing: 0.03em;
 }
+
+
+/* /* ОСНОВНОЙ КОНТЕЙНЕР */
 .container, .header {
     width: 1170px;
     outline: 2px solid red;
     vertical-align: middle;
     margin-left: auto;
     margin-right: auto;
-
-
-    /* margin: 0;
-    padding: 0; */
-    /* padding-left: 15px;
-    margin-left: 200px;
-    
-    padding-right: 15px; */
-    
-    
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
-    /* vertical-align: middle; */
 }
 
 
@@ -70,12 +59,12 @@ body {
     display: flex;
 }
 .logo {
-    margin-right: 93px;
     background: teal;
+    margin-right: 93px;
     padding-top: 24px;
     padding-bottom: 25px;
 }
-.logo, .logo-d, .logo-l {
+.logo,.logo-footer, .logo-d, .logo-l {
     font-family: 'Raleway';
     font-style: normal;
     font-weight: 700;
@@ -129,6 +118,7 @@ body {
 /* Секция заказ услуги(баннер) */
 .banner {
     text-align: center;
+    margin-bottom: 94px;
 
     letter-spacing: 0.06em;
     color: var(--logo-color);
@@ -160,98 +150,113 @@ body {
 
 
 /* Секция с преимуществом студии */
-.section {
-    margin-top: 94px;  
+.container .features {
+    margin-bottom: 94px;
 }
-
+.features {
+    display: flex;
+}
 .features-title, .features-text {  
     font-size: 14px;
-    line-height: 1.14;
+    line-height: 1.14; 
 }
 .features-title {
+    background-color: teal;
+    margin-bottom: 10px;
+
     font-weight: 700;
     text-transform: uppercase;
-
-    margin-bottom: 10px;
 }
 .features-text {
     color: var(--brand-second-color);
-
-   
+    background-color: brown;
+}
+.features-item {
     width: 270px;
     margin-right: 30px;
-    
+    margin-left: auto;
+    justify-content: space-between;
 }
-
-
-.features {
-   display: flex;
+.features-item:last-child {
+    margin-right: 0;
 }
 
 /* Чем занимаемся */
 .section-title {
+    background-color: teal;
+    
+    text-align: center;
+    margin-bottom: 50px;
+
     font-weight: 700;
     font-size: 36px;
     line-height: 1.67;
-
-    text-align: center;
-    padding-bottom: 50px;
 }
-.section-title.team  {
-    
-    text-align: center;
-    margin-top: 94px;
-    padding-top: 94px;
-   
-}
-.works {
-    display: flex;
+.works ul {
+    display: flex; 
     
 }
 .works-item {
-    display: flex;
     margin-right: 30px;
-    align-items: center;
-    justify-content: space-between;
-    
+    ;
 }
-.works-item.a {
-    margin-left: 15px;
+.works-item:last-child {
+    margin-right: 0;
 }
-.works-item.c {
-    margin-right: 15px;
-}
+
+
 /* Наша команда */
-.teams { 
-    background-color: var(--team-background); 
+.container.team, .footer {
+    width: 1600px;
+    background-color: var(--team-background);
+}
+.section-title.team {
+    text-align: center;
+    padding-top: 94px;
+}
+.people {
+    width: 1170px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
-
-}
-
-.team-title, .team-text {
-    display: flex;
- font-weight: 500;
-font-size: 16px;
-line-height: 1.19; 
-}
-.team-title { line-height: 1.19; }
-.team-text { color: var(--brand-second-color); }
-
-.team-item li {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-right: 30px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 94px;
 }
+.team-title, .team-text {
+    text-align: center;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19; 
+}
+.team-title { 
+    margin-top: 30px;
+    margin-bottom: 10px;
+    line-height: 1.19; }
+.team-text { margin-bottom: 10px;
+    color: var(--brand-second-color); }
+
+.team-item li {
+    background-color: var(--logo-color);
+    margin-right: 30px;
+}
+
+
 /* Шрифты для футера(подвала) */
 .footer {
     background-color: var(--banner-background);
-    padding-left: 215px;
     outline: 2px solid red;
+}
+.footer-box {
+    width: 1170px;
+    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+.logo-footer {
+    background: #008080;
 }
 .footer-address, .footer-contacts-item {
     font-style: normal;
@@ -259,12 +264,17 @@ line-height: 1.19;
     line-height: 1.71;   
 }
 .footer-address {
-color: var(--logo-color);
-margin-top: 20px;
-
+    background-color: red;
+    color: var(--logo-color);
+    margin-top: 20px;
+    margin-bottom: 9px;
 }
-.footer-contacts {
-    padding-bottom: 60px;
+.footer-contacts-link {
+    background-color: red;
+    margin-bottom: 9px;
+}
+.footer-contacts-link:last-child {
+    margin-bottom: 0;
 }
 .footer-contacts-item {
     letter-spacing: 00.03em;
