--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ html {
     --banner-background: #2F303A;
     --team-background: #F5F4FA;
 }
+
 /* Селекторы тегов */
 ul { list-style: none; 
     padding-left: 0; 
@@ -43,9 +44,7 @@ body {
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
-    margin-right: auto;o
-    /* vertical-align: middle; */
-    
+    margin-right: auto;
 }
 
 
@@ -190,11 +189,9 @@ body {
 }
 .works ul {
     display: flex; 
-    
 }
 .works-item {
     margin-right: 30px;
-    ;
 }
 .works-item:last-child {
     margin-right: 0;
@@ -231,9 +228,10 @@ body {
     margin-top: 30px;
     margin-bottom: 10px;
     line-height: 1.19; }
-.team-text { margin-bottom: 10px;
-    color: var(--brand-second-color); }
-
+.team-text { 
+    margin-bottom: 10px;
+    color: var(--brand-second-color); 
+}
 .team-item li {
     background-color: var(--logo-color);
     margin-right: 30px;
@@ -272,33 +270,72 @@ body {
     color: rgba(255, 255, 255, 0.6);
 }
 
+
 /* CSS для портфолио */
+.container.filtr {
+    padding-bottom: 94px;
+}
+.filtr-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 611px;
+    margin-bottom: 50px;
+}
+.features-nav .item:last-child {
+    margin-right: 8px;
+}
 .filtr-button {
+    display: flex;
+    align-items: center;
+    border-radius: 4px;
+    padding: 6px 22px;
+    box-sizing: border-box;
+    border: 1px solid #EEEEEE;
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
     cursor: pointer;
     letter-spacing: 0.03em;
-    background-color: var(--team-background);
-    color: var(--brand-color);
-
-    border-radius: 4px;
-    min-width: 200px;
-    padding: 6px 22px;
+    color: var(--brand-color);    
 }
 .filtr-button:hover, .filtr-button:focus {
     color: var(--logo-color);
     background-color: var(--brand-btn-background);
 }
-
+.portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+}
+.portfolio-item {
+    width: 370px;
+    margin: 0 30px 30px auto;
+    box-sizing: border-box;
+    border: 1px solid #EEEEEE;
+    background-color: var(--logo-color);
+}
+.portfolio-item:nth-child(3n) {
+    margin-right: 0;
+}
+.portfolio-item:nth-child(n+7) {
+    margin-bottom: 0;
+}
 .portfolio-title {
-font-weight: 700;
-font-size: 18px;
-line-height: 2;
-letter-spacing: 0.06em;
-color: var(--brand-color);
+    text-align: left;
+
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: var(--brand-color);
 }
 .portfolio-text {
+    text-align: left;
+
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
