--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,8 @@ body {
 }
 
 
-/* /* ОСНОВНОЙ КОНТЕЙНЕР */
-.container, .header {
+ /* ОСНОВНОЙ КОНТЕЙНЕР */
+.container {
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
@@ -50,14 +50,13 @@ body {
 
 /* Шрифты для хедера (шапки) */
 .header { 
+    border: 1px solid var(--brand-second-color);
+    background-color: var(--logo-color);
+}
+.nav, .header-nav-logo, .logo, .header-contacts, .header-nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-   
-    background-color: var(--logo-color);
-}
-.header-nav-logo {
-    display: flex;
 }
 .logo {
     margin-right: 93px;
@@ -74,11 +73,8 @@ body {
 }
 .logo-l { color: var(--logo-color); }
 .logo-d { color: #000000; }
-.header-nav {
-    display: flex;
-}
 .header-nav-link, .header-contacts-link {
-    display: block;
+    display: flex;
     padding-top: 32px;
     padding-bottom: 32px;
 
@@ -87,43 +83,38 @@ body {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--brand-color);
-
 }
-.header-nav .item {  
+.header-nav .item, .header-contacts .item { 
     margin-right: 50px;  
 }
+.header-contacts .item:last-child,
 .header-nav .item:last-child {
     margin-right: 0;
 }
-.header-contacts {
-    display: flex; 
-}
-.header-contacts .item {
-    margin-right: 50px;  
+.header-nav .item:last-child {
     margin-left: auto;
 }
-.header-contacts .item:last-child {
-    margin-right: 0;
-}
-.header-contacts-link { color: var(--brand-second-color);
+.header-contacts-link { 
+    color: var(--brand-second-color);
 }
 .header-nav-link:hover, .header-nav-link:focus, 
 .header-contacts-link:hover, .header-contacts-link:focus,
-.footer-contacts-item:hover, .footer-contacts-item:focus
+.footer-contacts-link:hover, .footer-contacts-link:focus
 { color: var(--brand-btn-background); }
 
 
 /* Секция заказ услуги(баннер) */
 .banner {
     text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
 
     letter-spacing: 0.06em;
     color: var(--logo-color);
     background-color: var(--banner-background); 
 }
 .banner-title {
-    padding-top: 200px;
-    padding-bottom: 30px;
+    margin-bottom: 30px;
 
     font-weight: 900;
     font-size: 44px;
@@ -134,7 +125,6 @@ body {
     border-radius: 4px;
     height: 50px;
     padding: 10px 32px;
-    margin-bottom: 200px;
     border: 1px solid transparent;
 
     font-weight: 700;
@@ -147,26 +137,41 @@ body {
 
 
 /* Секция с преимуществом студии */
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+    white-space: nowrap;
+    clip-path: inset(50%);
+}
+
 .section {
     padding-top: 94px;
+    padding-bottom: 94px;
 }
 .features {
     display: flex;
 }
-.features-title, .features-text {  
-    font-size: 14px;
-    line-height: 1.14; 
-}
-.features-title {
+.features-title { 
     margin-bottom: 10px;
+    text-transform: uppercase;
 
     font-weight: 700;
-    text-transform: uppercase;
+    font-size: 14px;
+    line-height: 1.14; 
 }
 .features-text {
     text-align: left;
     vertical-align: top;
     color: var(--brand-second-color);
+
+    font-size: 14px;
+    line-height: 1.71;
 }
 .features-item {
     width: 270px;
@@ -179,13 +184,16 @@ body {
 }
 
 /* Чем занимаемся */
+.section.works {
+    padding-top: 0;
+}
 .section-title {
     text-align: center;
     margin-bottom: 50px;
 
     font-weight: 700;
     font-size: 36px;
-    line-height: 1.67;
+    line-height: 1.17;
 }
 .works ul {
     display: flex; 
@@ -199,64 +207,56 @@ body {
 
 
 /* Наша команда */
-.container.team, .footer {
-    width: 1600px;
+.section.people {
     background-color: var(--team-background);
 }
-.container.team {
-    padding-top: 94px;
-}
-.people {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+.team {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-bottom: 94px;
+}
+.team-title {
+    margin-bottom: 10px;
+
+    color: var(--brand-color);
+    font-weight: 500;
 }
 .team-title, .team-text {
     text-align: center;
-
-    font-weight: 500;
     font-size: 16px;
     line-height: 1.19; 
 }
-.team-title { 
-    margin-top: 30px;
-    margin-bottom: 10px;
-    line-height: 1.19; }
 .team-text { 
-    margin-bottom: 10px;
-    color: var(--brand-second-color); 
+    color: var(--brand-second-color);
 }
 .team-item li {
-    background-color: var(--logo-color);
     margin-right: 30px;
+}
+.initials {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-bottom:1px solid #FFFFFF;
+    border-left:1px solid #FFFFFF;
+    border-right: 1px solid #FFFFFF;
 }
 
 
 /* Шрифты для футера(подвала) */
 .footer {
+    padding-top: 60px;
+    padding-bottom: 60px;
     background-color: var(--banner-background);
-}
-.footer-box {
-    width: 1200px;
-    padding: 60px 15px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
 }
 .footer-address, .footer-contacts-item {
     font-style: normal;
     font-size: 14px;
     line-height: 1.71;   
 }
+.address {
+    margin-top: 20px;
+}
 .footer-address {
     color: var(--logo-color);
-    margin-top: 20px;
     margin-bottom: 9px;
 }
 .footer-contacts-link {
@@ -272,50 +272,46 @@ body {
 
 
 /* CSS для портфолио */
-.container.filtr {
-    padding-bottom: 94px;
-}
 .filtr-nav {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 611px;
+    justify-content: center;
     margin-bottom: 50px;
 }
-.features-nav .item:last-child {
+.filtr-item{
     margin-right: 8px;
+}
+.filtr-item:last-child {
+    margin-right: 0;
 }
 .filtr-button {
     display: flex;
     align-items: center;
     border-radius: 4px;
     padding: 6px 22px;
-    box-sizing: border-box;
-    border: 1px solid #EEEEEE;
-
+    background-color: var(--team-background);
+    border: rgba(0, 0, 0, 0.25);
+    
+    font-family: 'Roboto';
     font-weight: 500;
     font-size: 16px;
     line-height: 1.63;
     cursor: pointer;
     letter-spacing: 0.03em;
-    color: var(--brand-color);    
+    color: var(--brand-color);   
 }
 .filtr-button:hover, .filtr-button:focus {
     color: var(--logo-color);
     background-color: var(--brand-btn-background);
 }
+
 .portfolio {
     display: flex;
     flex-wrap: wrap;
-    align-items: baseline;
 }
 .portfolio-item {
     width: 370px;
     margin: 0 30px 30px auto;
-    box-sizing: border-box;
-    border: 1px solid #EEEEEE;
+    
     background-color: var(--logo-color);
 }
 .portfolio-item:nth-child(3n) {
@@ -323,9 +319,19 @@ body {
 }
 .portfolio-item:nth-child(n+7) {
     margin-bottom: 0;
+    margin-left: 0;
 }
-.portfolio-title {
-    text-align: left;
+.port-title {
+    padding: 20px 24px;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-left: 1px solid #EEEEEE;
+    border-right: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
+  
+}
+.portfolio-title { 
+    margin-bottom: 4px;
 
     font-weight: 700;
     font-size: 18px;
@@ -334,8 +340,6 @@ body {
     color: var(--brand-color);
 }
 .portfolio-text {
-    text-align: left;
-
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
