--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,8 @@ ul { list-style: none;
 a { text-decoration-line: none;
 }
 img { display: block;
-    max-width: 100%; }
+    max-width: 100%;
+    height: auto; }
 h1, h2, h3, p, ul {
     margin-top: 0;
     margin-bottom: 0;
@@ -50,7 +51,7 @@ body {
 
 /* Шрифты для хедера (шапки) */
 .header { 
-    border: 1px solid var(--brand-second-color);
+    border-bottom: 1px solid #ECECEC;
     background-color: var(--logo-color);
 }
 .nav, .header-nav-logo, .logo, .header-contacts, .header-nav {
@@ -233,11 +234,11 @@ body {
     margin-right: 30px;
 }
 .initials {
-    margin-top: 30px;
-    margin-bottom: 30px;
-    border-bottom:1px solid #FFFFFF;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    /* border-bottom:1px solid #FFFFFF;
     border-left:1px solid #FFFFFF;
-    border-right: 1px solid #FFFFFF;
+    border-right: 1px solid #FFFFFF; */
 }
 
 
